--- a/src/index.css
+++ b/src/index.css
@@ -5,9 +5,34 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  
+  
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+.main{
+  display: flex;
+  flex-direction: column;
+}
+.head{
+  height: 34px;
+  width: 100%;
+  background-color: #969696;
+}
+.under-head{
+  height: 64px;
+  width: 100%;
+  background-color: #172B4E;
+
+}
+.content{
+  background-image: url(./img/12.jpg);
+  background-position: center;
+  background-size: cover;
+  width: 100%;
+  height: 100vh;
 }
