--- a/src/index.css
+++ b/src/index.css
@@ -36,3 +36,56 @@ code {
   width: 100%;
   height: 100vh;
 }
+.conteiner{
+  display: flex;
+  flex-direction: row;
+  width: 100%;
+  min-height: 50vh;
+}
+.list{
+  width: 15%;
+  min-height: 124px;
+  padding-bottom: 10px;
+  margin-top: 15px;
+  margin-left: 10px;
+  background-color:#969696 ;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.name{
+  padding: 10px 0px;
+}
+.add-list{
+    width: 15%;
+    min-height: 50vh;
+    margin-top: 15px;
+    margin-left: 10px;  
+    
+}
+.add-task{
+  border: none;
+  padding: 10px 5px;
+}
+.add-list input{
+  padding: 10px 5px;
+  border:none;
+}
+.task-row{
+  margin-top:5px;
+  background-color: white;
+  display: flex;
+  flex-direction: row;
+  width: 97%;
+  justify-content: space-between;
+  padding: 10px 0px;
+}
+.task-row button{
+  border:none;
+  background-color: none;
+
+}
+.task-row button:hover{
+  color:red;
+}
+
