--- a/src/index.css
+++ b/src/index.css
@@ -21,12 +21,12 @@ code {
 .head{
   height: 34px;
   width: 100%;
-  background-color: #969696;
+  background-color: rgba(0,0,0,.32);;
 }
 .under-head{
   height: 64px;
   width: 100%;
-  background-color: #172B4E;
+  background-color: rgb(23, 43, 77);
 
 }
 .content{
@@ -48,37 +48,46 @@ code {
   padding-bottom: 10px;
   margin-top: 15px;
   margin-left: 10px;
-  background-color:#969696 ;
+  background-color:#EBECF0 ;
   display: flex;
   flex-direction: column;
-  align-items: center;
 }
 .name{
   padding: 10px 0px;
+  float: left;
+  padding-left: 5px;
 }
 .add-list{
     width: 15%;
     min-height: 50vh;
     margin-top: 15px;
-    margin-left: 10px;  
-    
+    margin-left: 10px;      
+}
+.add-list input{
+
+  box-shadow: 0 1px 0 rgba(9,30,66,.25)
 }
 .add-task{
   border: none;
+  margin-top: 5px;
   padding: 10px 5px;
+  box-shadow: 0 1px 0 rgba(9,30,66,.25);
+  width: 95%;
 }
 .add-list input{
   padding: 10px 5px;
   border:none;
+  
 }
 .task-row{
   margin-top:5px;
   background-color: white;
   display: flex;
   flex-direction: row;
-  width: 97%;
+  width: 95%;
   justify-content: space-between;
   padding: 10px 0px;
+  box-shadow: 0 1px 0 rgba(9,30,66,.25)
 }
 .task-row button{
   border:none;
@@ -88,4 +97,14 @@ code {
 .task-row button:hover{
   color:red;
 }
+.name-row{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+.dots{
+  padding-right: 5px;
+  padding-top: 5px;
+}
+
 
